--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "proxy": "http://localhost:3000",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot & nodemon ./src/server.js",
+    "start": "webpack-dev-server --mode development --open --hot & nodemon ./server/server.js",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "pg": "^8.11.1",
