--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2"
   }
 }
